<resources>
    <string name="app_name">TIMESIndonesia</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_favorit">Favorit</string>
    <string name="title_kanal">Kanal</string>
    <string name="title_cari">Cari</string>
    <string name="title_video">Video</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="kata_kunci">Kata Kunci ...</string>
    <string name="pencarian">Pencarian Populer</string>
    <string name="rekomendasi">Rekomendasi</string>

    <string name="headline">Headline</string>
    <string name="populer">Populer</string>
    <string name="fokus">Fokus</string>
    <string name="foto">Foto</string>
    <string name="indexs">Indexs</string>

    <string name="pengaturan">Pengaturan</string>
    <string name="favorit">Favorit</string>
    <string name="graphic">Graphic</string>
    <string name="opini">Opini</string>
    <string name="vlog">Times V-log</string>
    <string name="glutera">Glutera News</string>

    <string name="IRI">Indeks Rekomendasi Indonesia</string>
    <string name="fullscreen">View Fullscreen</string>

    <string name="kesehatan">Kesehatan</string>
    <string name="video_terkait">Video Terkait</string>
    <string name="berita_terkait">Berita Terkait</string>
    <string name="peristiwa">PERISTIWA</string>
    <string name="politik">POLITIK</string>
    <string name="ekonomi">EKONOMI</string>
    <string name="gaya_hidup">GAYA HIDUP</string>
    <string name="olahraga">OLAHRAGA</string>
    <string name="pendidikan">PENDIDIKAN</string>
    <string name="ketahanan_informasi">KETAHANAN INFORMASI</string>
    <string name="more">MORE</string>

    <string name="views">29,24K Views</string>

    <string name="heading">Trending</string>
    <string name="heading2">Video</string>
    <string name="heading3">Hari Ini</string>
    <string name="judul">Peristiwa</string>
    <string name="isi">Usai Ditetapkan Sebagai Tersangka, KPK RI Geledah Ruang Sekda Jawa Barat</string>
    <string name="tanggal">Rabu, 31 Juli 2019</string>
    <string name="judul2">TimesVlog</string>
    <string name="isi2">Yuk Belajar Sejarah di Museum Ganesya Hawai Waterpark </string>
    <string name="pollindetail">Jika Pilkada Kabupaten Musi Rawas 2020 digelar hari ini, siapa pilihan anda?</string>
    <string name="pollingend">Berakhir pada 16 Maret 2020, 12:00 AM</string>

    <string name="notif">Push Notification</string>
    <string name="share">Share App</string>
    <string name="rate">Rate App</string>
    <string name="fb">Follow on Facebook</string>
    <string name="twit">Follow on Twitter</string>
    <string name="pp">Privacy Police</string>
    <string name="about">Tentang Kami</string>
    <string name="jurnal">Jurnalisme Positif</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="iklan">Info Iklan</string>
    <string name="pmc">PMC</string>

    <string name="isi_berita">TIMESINDONESIA, JAKARTA - Dua bus listrik buatan PT. Bakrie dan
Brothers Tbk (BNRB) dan PT Mobil Anak Bangsa (MAB) tengah
memasuki uji coba selama 6 bulan kedepan. Keberadaan bus
listrik ini diklaim sebagai moda transortasi masa depan terutama
di Indonesia dengan mesin yang dirancang ramah lingkungan..</string>

    <string-array name="data_kategori">
        <item>Peristiwa</item>
        <item>Kesehatan</item>
        <item>Pemerintahan</item>
        <item>Gaya Hidup</item>
        <item>Politik</item>
    </string-array>

    <string-array name="data_fokus">
        <item># OTT Komisioner KPU</item>
        <item># OTT KPK di Sidoarjo</item>
        <item># Anugerah TIMES Indonesia 2019</item>
        <item># Ledakan di Monas</item>
        <item># Ahok Menuju Bos Pertamina</item>
        <item># Lowongan CPNS 2019</item>
        <item># Kongres PSSI 2019</item>
        <item># Berita Panglima TNI Hari ini</item>
        <item># Sumpah Pemuda Milenial</item>
        <item># Wakil Menteri Indonesia Maju</item>
    </string-array>

    <string-array name="data_polling">
        <item>Jika Pilkada Kabupaten Musi Rawas 2020 digelar hari ini, siapa pilihan anda?</item>
        <item>Jika Pilbup Gunung Kidul 2020 berlangsung hari ini, siapa pilihan anda?</item>
        <item>Jika Pilbup Sleman 2020 berlangsung hari ini, siapa pilihan anda?</item>
        <item>Jika Pilbup Bantul 2020 berlangsung hari ini, siapa pilihan anda?</item>
        <item>Jika Calon Bupati Banyuwangi 2020 pilihan anda hayoo?</item>
    </string-array>

    <string-array name="data_detail_polling">
        <item>Firdaus Cik Olah</item>
        <item>Hendra Gunawan</item>
        <item>Prayitno</item>
        <item>Ratna Mahmud Amin</item>
    </string-array>

    <string-array name="data_detail_polling_jabatan">
        <item>FKetua Partai Golkar / Waket DPRD</item>
        <item>Pertahanan / Birokrat</item>
        <item>Anggota DPRD</item>
        <item>Eks Birokrat</item>
    </string-array>

    <string-array name="data_detail_polling_number">
        <item>A.</item>
        <item>B.</item>
        <item>C.</item>
        <item>D.</item>
    </string-array>

    <string-array name="data_polling_tgl">
        <item>Berakhir pada 16 Maret 2020, 12:00 AM</item>
        <item>Berakhir pada 16 Maret 2020, 12:00 AM</item>
        <item>Berakhir pada 16 Maret 2020, 12:00 AM</item>
        <item>Berakhir pada 16 Maret 2020, 12:00 AM</item>
        <item>Berakhir pada 16 Maret 2020, 12:00 AM</item>
    </string-array>

    <string-array name="data_judul">
        <item>Usai Ditetapkan Sebagai Tersangka, KPK RI Geledah Ruang Sekda Jawa Barat</item>
        <item>Waspadai, 3 Makanan Ini Tingkatkan Risiko Kanker Otak</item>
        <item>Wagub NTB Sitti Rohmi Djalilah Buka Lombok Sumbawa Great Sale 2020</item>
        <item>Menu Sarapan Agar Lebih Semangat di Hari Minggu</item>
        <item>KPU Papua Barat: Dengan Sinergi Semua Elemen akan Sukseskan Pilkada Raja Ampat 2020</item>
    </string-array>

    <string-array name="data_isi">
        <item>TIMESINDONESIA, JAKARTA - Dua bus listrik buatan PT. Bakrie dan
Brothers Tbk (BNRB) dan PT Mobil Anak Bangsa (MAB) tengah
memasuki uji coba selama 6 bulan kedepan. Keberadaan bus
listrik ini diklaim sebagai moda transortasi masa depan terutama
di Indonesia dengan mesin yang dirancang ramah lingkungan...</item>
        <item>TIMESINDONESIA, JAKARTA – Kanker otak adalah penyakit yang cukup mengerikan. Kondisi
            ini terjadi saat sel-sel di otak mengalami pertumbuhan berlebih yang membentuk massa
            yang disebut tumor. Menurut perkiraan dari American Cancer Society, peluang seseorang
            mengalami kanker otak di bawah satu persen...</item>
        <item>TIMESINDONESIA, MATARAM – Wagub NTB Sitti Rohmi Djalilah meresmikan kegiatan wisata
            Lombok Sumbawa Great Sale 2020 di Atrium Lombok Epicentrum Mall, Kota Mataram,
            Sabtu (25/1/2020) malam...</item>
        <item>TIMESINDONESIA, JAKARTA – Hari Minggu bagi sebagian orang adalah hari untuk bermalas-malasan
            karena libur kerja. Namun bagi sebagian yang lain, hari Minggu adalah hari untuk
            bersenang-senang. Jika Anda ingin menikmati hari Minggu dengan berjalan-jalan atau
            melakukan hal lain, jangan lupa untuk sarapan sebelum memulai aktivitas. Menu sarapan apa
            yang bisa membuat Anda lebih bersemangat?</item>
        <item>TIMESINDONESIA, RAYA AMPAT – Komisi Pemilihan Umum Provinsi Papua Barat (KPU Papua Barat)
            menegaskan semua elemen harus membangun sinergi untuk menyukseskan penyelenggaraan pesta
            demokrasi Pemilukada Raja Ampat Tahun 2020 (Pilkada Raja Ampat 2020)...</item>
    </string-array>

    <string-array name="data_tanggal">
        <item>Rabu, 31 Juli 2019</item>
        <item>Minggu, 26 Januari 2020</item>
        <item>Minggu, 26 Januari 2020</item>
        <item>Minggu, 26 Januari 2020</item>
        <item>Jum\'at, 24 Januari 2020</item>
    </string-array>

    <string-array name="data_nomer">
        <item>1.</item>
        <item>2.</item>
        <item>3.</item>
        <item>4.</item>
        <item>5.</item>
    </string-array>

    <string-array name="data_img">
        <item>https://tinyurl.com/w8avwwt</item>
        <item>https://tinyurl.com/r9l8l6z</item>
        <item>https://tinyurl.com/w6w3jtl</item>
        <item>https://tinyurl.com/r8gf93x</item>
        <item>https://tinyurl.com/rky3fqz</item>
    </string-array>

    <string-array name="data_kanal">
        <item>Peristiwa</item>
        <item>Politik</item>
        <item>Ekonomi</item>
        <item>Gaya Hidup</item>
        <item>Olahraga</item>
        <item>Pendidikan</item>
        <item>Ketahanan</item>
        <item>More</item>
    </string-array>

    <string-array name="data_kanal_img">
        <item>https://tinyurl.com/sqzfh6x</item>
        <item>https://tinyurl.com/skz5wv8</item>
        <item>https://tinyurl.com/wvqygs8</item>
        <item>https://tinyurl.com/wmna3kw</item>
        <item>https://tinyurl.com/s6hy3h6</item>
        <item>https://tinyurl.com/rwnes2g</item>
        <item>https://tinyurl.com/utceh26</item>
        <item>https://tinyurl.com/tf6x75g</item>
    </string-array>

</resources>
