<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_0"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:title="@string/title_cari" />

    <LinearLayout
        android:id="@+id/layout_seacrh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="@dimen/margin_18"
        android:layout_marginBottom="@dimen/margin_15"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_cari"
            android:layout_width="@dimen/margin_250"
            android:layout_height="@dimen/margin_40"
            android:layout_marginRight="@dimen/margin_10"
            android:background="@drawable/square_edit_text"
            android:drawableRight="@drawable/ic_clear_black_24dp"
            android:focusable="true"
            android:hint="@string/kata_kunci"
            android:padding="@dimen/margin_10"
            android:textColor="@color/black" />

        <Button
            android:layout_width="@dimen/margin_80"
            android:layout_height="@dimen/margin_40"
            android:background="@color/colorPrimary"
            android:text="@string/title_cari"
            android:textColor="@color/white" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_seacrh">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_24"
            android:layout_marginRight="@dimen/margin_24"
            android:layout_marginBottom="@dimen/margin_24">

            <TextView
                android:id="@+id/txt_populer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_24"
                android:layout_marginBottom="@dimen/margin_4"
                android:text="@string/pencarian"
                android:textSize="@dimen/size_14" />

            <View
                android:id="@+id/garis"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_1"
                android:layout_below="@id/txt_populer"
                android:layout_marginTop="@dimen/margin_5"
                android:background="@color/black" />

            <ListView
                android:id="@+id/txt_list_pencarian"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_150"
                android:layout_below="@id/garis" />

            <TextView
                android:id="@+id/txt_rekomendasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_list_pencarian"
                android:layout_marginTop="@dimen/margin_24"
                android:layout_marginBottom="@dimen/margin_4"
                android:text="@string/rekomendasi"
                android:textSize="@dimen/size_14" />

            <View
                android:id="@+id/garis2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_1"
                android:layout_below="@id/txt_rekomendasi"
                android:background="@color/black" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rc_rekomendasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/garis2"
                android:layout_marginTop="@dimen/margin_10"></android.support.v7.widget.RecyclerView>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>