<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"

        android:background="@color/background">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/left_arrow"
            android:layout_margin="@dimen/margin_15"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/isi"
                android:textColor="#1B1A1A"
                android:textSize="@dimen/size_nomer"
                android:id="@+id/txt_judul"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tanggal"
                android:textSize="14sp"
                android:layout_below="@+id/txt_judul"
                android:id="@+id/txt_hari"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="29k"
                android:textSize="14sp"
                android:layout_marginStart="50dp"
                android:layout_toEndOf="@id/txt_hari"
                android:layout_below="@id/txt_judul"
                />
            <ImageView
                android:layout_width="400dp"
                android:layout_height="250dp"
                android:src="@drawable/berita"
                android:layout_below="@id/txt_hari"
                android:id="@+id/img_berita"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/isi_berita"
                android:layout_below="@id/img_berita"
                android:id="@+id/txt_isi_berita"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Politik"
                android:layout_below="@id/txt_isi_berita"
                android:id="@+id/btn_1"
                android:background="#E2DCDC"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Peristiwa"
                android:id="@+id/btn_2"
                android:layout_below="@id/txt_isi_berita"
                android:layout_toRightOf="@id/btn_1"
                android:background="#E2DCDC"/>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>
